--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0 200px;
 }
 .nav-title {
   font-size: 45px;
@@ -37,4 +38,17 @@ nav li {
 nav a {
   text-decoration: none;
   color: #181818;
+}
+/* Header Related style */
+.header {
+  background-color: #fff8f3;
+}
+.banner {
+  padding-left: 30px 30px 30px 150px;
+  display: flex;
+  align-items: center;
+}
+.banner .profile-pic {
+  width: 500px;
+  height: 600px;
 }
