--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,22 @@ body {
   font-size: 20px;
   font-weight: 700;
   color: white;
-  padding: 15px 35px;
+  padding: 15px 30px;
+}
+
+.section-title {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+.section-description {
+  max-width: 850px;
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
 }
 /* nav related styles */
 nav {
@@ -42,13 +57,51 @@ nav a {
 /* Header Related style */
 .header {
   background-color: #fff8f3;
+  background-image: url("../images/header_bg.png");
+  background-position: right bottom;
+  background-repeat: no-repeat;
 }
 .banner {
-  padding-left: 30px 30px 30px 150px;
+  padding: 30px 30px 0px 200px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
+}
+.banner-content {
+  max-width: 500px;
 }
 .banner .profile-pic {
   width: 500px;
   height: 600px;
+}
+.banner-greeting {
+  font-size: 45px;
+  font-weight: 600;
+  color: #474747;
+  margin-bottom: 0;
+}
+.banner-title {
+  font-size: 85px;
+  font-weight: 700;
+  color: #181818;
+  margin-top: 5px;
+  margin-bottom: 0%;
+}
+.banner-description {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+  color: #757575;
+}
+/* main section styles */
+main {
+  display: flex;
+  justify-content: center;
+}
+/* about section styles */
+.about {
+  padding: 130px;
+  border-radius: 10px;
+  background: #fff8f3;
+  margin-top: 130px;
 }
