--- a/styles/style.css
+++ b/styles/style.css
@@ -98,12 +98,14 @@ main {
   max-width: 1140px;
   margin: 0 auto;
 }
+main section {
+  margin-top: 130px;
+}
 /* about section styles */
 .about {
   padding: 130px;
   border-radius: 10px;
   background: #fff8f3;
-  margin-top: 130px;
 }
 .about-info-container {
   display: flex;
@@ -111,4 +113,44 @@ main {
 }
 .about-info {
   text-align: center;
+}
+.info-title {
+  color: #757575;
+}
+.info-description {
+  color: #474747;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+/* skill section */
+.section-descriptions {
+  text-align: center;
+  font-size: 18px;
+  color: #757575;
+  font-weight: 400;
+  line-height: 30px;
+  margin-top: 30px 0px;
+}
+.skill {
+  display: flex;
+  gap: 24px;
+}
+.skill-item {
+  padding: 30px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-name {
+  margin: 10px 0px;
+  color: #181818;
+  font-size: 20px;
+  font-weight: 700;
+}
+.skill-description {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
 }
