--- a/styles/style.css
+++ b/styles/style.css
@@ -154,3 +154,37 @@ main section {
   font-weight: 400;
   line-height: 28px; /* 175% */
 }
+/* resume section */
+
+.resume-section {
+  display: flex;
+  gap: 70px;
+  justify-content: center;
+}
+.resume-heading {
+  color: #474747;
+  font-size: 30px;
+  font-weight: 700;
+}
+.resume-title {
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.resume-institute {
+  color: #757575;
+  font-size: 20px;
+  font-weight: 600;
+}
+.resume-description {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+}
+.cvBtn {
+  text-align: center;
+  margin-top: 30px;
+}
+/*  */
