--- a/styles/style.css
+++ b/styles/style.css
@@ -187,4 +187,34 @@ main section {
   text-align: center;
   margin-top: 30px;
 }
-/*  */
+/* Footer */
+footer {
+  width: 100%;
+  background: #fff8f3;
+}
+.footer {
+  max-width: 1140px;
+  margin: 0 auto;
+  display: flex;
+  padding: 130px 0px;
+  gap: 100px;
+}
+.footer-heading {
+  color: #181818;
+  font-size: 35px;
+  font-weight: 700;
+}
+.footer-description {
+  color: #474747;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+}
+.from-input {
+  width: 100%;
+  padding: 12px 30px;
+  border-radius: 5px;
+  border-color: white;
+  background: #fff;
+  margin-bottom: 24px;
+}
